Unlock hardware RT path for CMake builds (untested on *nix)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,24 +36,24 @@ find_package(OpenMP)
 # handle optional dependencies
 set(OPTIONAL_DEPENDENCIES "")
 if (CUDA_FOUND AND OptiX_INCLUDE AND NOT OptiX_INCLUDE STREQUAL "OptiX_INCLUDE-NOTFOUND")
-	set(__EMIT_OPTIX_WARNING TRUE)
-	set(ENABLE_OPTIX_SUPPORT OFF CACHE BOOL ${ENABLE_OPTIX_SUPPORT_DOC} FORCE)
-	#add_subdirectory(tool/cuda_resprep) # build the cuda_resprep custom tool
-	#list(APPEND OPTIONAL_DEPENDENCIES ${CUDA_LIBRARIES})
-	#if(WIN32)
-	#	list(APPEND OPTIONAL_DEPENDENCIES "${CUDA_TOOLKIT_ROOT_DIR}/lib/x64/nvrtc.lib")
-	#else()
-	#	list(APPEND OPTIONAL_DEPENDENCIES libnvrtc)
-	#endif()
-	#list(APPEND FEATURE_DEFINES "RTX_SUPPORT=1")
-	#set(OTV_ADDITIONAL_INCLUDE_PATHS ${OptiX_INCLUDE} ${CUDA_TOOLKIT_INCLUDE})
-	#set(OTV_ADDITIONAL_INCLUDE_PATHS ${OptiX_INCLUDE} ${CUDA_TOOLKIT_INCLUDE})
-	#set(NVRTC_INCLUDE_DEFS
-	#	"CUDA_RUNTIME_COMPILER__INC_DIR_CUDA=\"${CUDA_TOOLKIT_INCLUDE}\""
-	#	"CUDA_RUNTIME_COMPILER__INC_DIR_OPTIX=\"${OptiX_INCLUDE}\""
-	#	"CUDA_RUNTIME_COMPILER__INC_DIR_OPTIXSDK=\"${OptiX_INSTALL_DIR}/SDK\""
-	#	"CUDA_RUNTIME_COMPILER__INC_DIR_OPTIXSDK_CUDA=\"${OptiX_INSTALL_DIR}/SDK/cuda\""
-	#)
+	#set(__EMIT_OPTIX_WARNING TRUE)
+	#set(ENABLE_OPTIX_SUPPORT OFF CACHE BOOL ${ENABLE_OPTIX_SUPPORT_DOC} FORCE)
+	add_subdirectory(tool/cuda_resprep) # build the cuda_resprep custom tool
+	list(APPEND OPTIONAL_DEPENDENCIES ${CUDA_LIBRARIES})
+	if(WIN32)
+		list(APPEND OPTIONAL_DEPENDENCIES "${CUDA_TOOLKIT_ROOT_DIR}/lib/x64/nvrtc.lib")
+	else()
+		list(APPEND OPTIONAL_DEPENDENCIES libnvrtc)
+	endif()
+	list(APPEND FEATURE_DEFINES "RTX_SUPPORT=1")
+	set(OTV_ADDITIONAL_INCLUDE_PATHS ${OptiX_INCLUDE} ${CUDA_TOOLKIT_INCLUDE})
+	set(OTV_ADDITIONAL_INCLUDE_PATHS ${OptiX_INCLUDE} ${CUDA_TOOLKIT_INCLUDE})
+	set(NVRTC_INCLUDE_DEFS
+		"CUDA_RUNTIME_COMPILER__INC_DIR_CUDA=\"${CUDA_TOOLKIT_INCLUDE}\""
+		"CUDA_RUNTIME_COMPILER__INC_DIR_OPTIX=\"${OptiX_INCLUDE}\""
+		"CUDA_RUNTIME_COMPILER__INC_DIR_OPTIXSDK=\"${OptiX_INSTALL_DIR}/SDK\""
+		"CUDA_RUNTIME_COMPILER__INC_DIR_OPTIXSDK_CUDA=\"${OptiX_INSTALL_DIR}/SDK/cuda\""
+	)
 else()
 	set(ENABLE_OPTIX_SUPPORT OFF CACHE BOOL ${ENABLE_OPTIX_SUPPORT_DOC} FORCE)
 endif()
