--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -95,6 +95,7 @@ set(SOURCES
 	csv_handler.cxx
 	glyph_attribute_mapping.cxx
 	glyph_layer_manager.cxx
+	mapping_legend.cxx
 	obd_handler.cxx
 	on_tube_vis.cxx
 	regulargrid.cxx
@@ -141,6 +142,7 @@ set(HEADERS
 	gui_util.h
 	hermite_spline_tube.h
 	layer_config_io.h
+	mapping_legend.h
 	obd_handler.h
 	on_tube_vis.h
 	quadratic_bezier_tube.h
