--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -47,7 +47,7 @@ jobs:
 
     - name: Install packages
       if: matrix.os == 'ubuntu-latest'
-      run: sudo apt install --fix-missing libglx-dev libglew-dev libxi-dev
+      run: sudo apt install --fix-missing libglx-dev libglew-dev libxi-dev libxinerama-dev
 
     - name: Set reusable strings
       # Turn repeated input strings (such as the build output directory) into step outputs. These step outputs can be used throughout the workflow file.
