--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,5 +1,5 @@
-# This starter workflow is for a CMake project running on multiple platforms. There is a different starter workflow if you just want a single platform.
-# See: https://github.com/actions/starter-workflows/blob/main/ci/cmake-single-platform.yml
+# This workflow tries to build the OnTubeVis CMake project on Windows and (Ubuntu) Linux. At this point, only the plugin build of OnTubeVis is tested,
+# pending investigation of strange build errors that appear only in the context of GH workflows (and which cannot be reproduced on normal desktops).
 name: Build on Windows and Linux
 
 on:
@@ -16,11 +16,11 @@ jobs:
       # Set fail-fast to false to ensure that feedback is delivered for all matrix combinations. Consider changing this to true when your workflow is stable.
       fail-fast: false
 
-      # Set up a matrix to run the following 3 configurations:
-      # 1. <Windows, Release, latest MSVC compiler toolchain on the default runner image, default generator>
-      # 3. <Linux, Release, latest Clang compiler toolchain on the default runner image, default generator>
+      # Set up a matrix to run the following 2 configurations:
+      # 1. <Windows, Release, latest MSVC compiler toolchain on the default runner image, Ninja generator>
+      # 3. <Linux, Release, latest Clang compiler toolchain on the default runner image, Ninja generator>
       #
-      # To add more build types (Release, Debug, RelWithDebInfo, etc.) customize the build_type list.
+      # To add more build types (Debug, RelWithDebInfo, etc.) customize the build_type list.
       matrix:
         os: [ubuntu-latest, windows-latest]
         build_type: [Release]
@@ -78,5 +78,5 @@ jobs:
         -S ${{ github.workspace }}
 
     - name: Build
-      # Build your program with the given configuration. Note that --config is needed because the default Windows generator is a multi-config generator (Visual Studio generator).
+      # Build your program with the given configuration. Note that --config is only needed for multi-config generators (e.g. Visual Studio generator), but we include it anyway.
       run: cmake --build ${{ steps.strings.outputs.build-output-dir }} --config ${{ matrix.build_type }} --target OnTubeVis
