GH workflows: try building the service target instead

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -78,4 +78,4 @@ jobs:
 
     - name: Build
       # Build your program with the given configuration. Note that --config is only needed for multi-config generators (e.g. Visual Studio generator), but we include it anyway.
-      run: cmake --build ${{ steps.strings.outputs.build-output-dir }} --config ${{ matrix.build_type }} --target OnTubeVis_exe
+      run: cmake --build ${{ steps.strings.outputs.build-output-dir }} --config ${{ matrix.build_type }} --target OnTubeVis_svc
