--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -228,7 +228,7 @@ cgv_add_target(OnTubeVis
 	ADDITIONAL_CMDLINE_ARGS
 		"config:\"${CMAKE_CURRENT_LIST_DIR}/config.def\""
 
-	OVERRIDE_SHARED_EXPORT_DEFINE TUBES_EXPORTS
+	OVERRIDE_SHARED_EXPORT_DEFINE ONTUBEVIS_EXPORTS
 
 	ADDITIONAL_PRIVATE_DEFINES ${NVRTC_INCLUDE_DEFS}
 )
